<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="logintitel">Gegevens renovatieadviseur:</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="about">RenBEN (Renovatie voor Bijna Energie Neutrale (rij)woningen in private huur) beoogt de renovatie van 3 maal 10 rijwoningen in Kortrijk, Harelbeke en Menen. In deze drie steden zullen gezinnen technische, financiële en sociale ondersteuning krijgen bij de renovatie van hun rijwoning. Het proeftuinproject loopt over een periode van 3 jaar.</string>
    <string name="private_key">81d5282cffbdc8404ca7c85cd4bdcdd5</string>
    <string name="public_key">4fd49301221641528079dd57df2db4e6</string>
    <string name="antwoordAntwoordoptie">antwoordtekst</string>
    <string name="btnChangeEindscherm">Instellingen</string>
    <string name="btnChooseListEindscherm">Volgende \n reeks</string>
    <string name="btnChooseListEindschermLong">Volgende reeks</string>
    <string name="btnSendEindscherm">Afronden en verzenden</string>
    <string name="lblResultEindscherm">Resulataat</string>
    <string name="lblWelcomeHome">Welkom</string>
    <string name="btnStartHome">Start enquete</string>
    <string name="btnSettingsHome">Instellingen</string>
    <string name="btnAboutHome">About Ren2BEN</string>
    <string name="btnDoneInstellingen1">Gereed</string>
    <string name="lblFirstNameInstellingen1">Voornaam:</string>
    <string name="lblNameInstellingen1">Naam:</string>
    <string name="lblEmailInstellingen1">Email:</string>
    <string name="btnConfirmInstellingen1">Bevestig</string>
    <string name="chkOwnerInstellingen2">Eigenaar</string>
    <string name="lblNameInstellingen2">Naam:</string>
    <string name="lblFirstNameInstellingen2">Voornaam:</string>
    <string name="lblStreetInstellingen2">Straat:</string>
    <string name="lblTownInstellingen2">Gemeente:</string>
    <string name="lblNumberInstellingen2">Nr:</string>
    <string name="lblZipCodeInstellingen2">Postcode:</string>
    <string name="btnConfirmInstellingen2">Bevestig</string>
    <string name="chkShowTipsInstellingen3">Tips weergeven</string>
    <string name="chkShowImagesInstellingen3">Afbeeldingen weergeven</string>
    <string name="lblFirstNameLoginadviseur">Voornaam:</string>
    <string name="lblNameLoginadviseur">Naam:</string>
    <string name="lblEmailLgoninadviseur">Email:</string>
    <string name="btnNextLoginadviseur">Volgende</string>
    <string name="chkOwnerLoginklant">Eigenaar</string>
    <string name="lblNameLoginklant">Naam:</string>
    <string name="lblFirstNameLoginklant">Voornaam:</string>
    <string name="lblStreetLoginklant">Straat:</string>
    <string name="lblTownLoginklant">Gemeente:</string>
    <string name="lblNumberLoginklant">Nr:</string>
    <string name="lblZipCodeLoginklant">Postcode:</string>
    <string name="btnNextLoginklant">Volgende</string>
    <string name="lblListnameReeks">reeksnaam</string>
    <string name="lblQuestionVragenscherm">Vraag Enquete</string>
    <string name="lblTipVragenscherm">Tip: een tip hier</string>
    <string name="btnOkVragenscherm">OK</string>
    <string name="btnTerug">Terug</string>
    <string name="btnKiesReeks">Kies Reeks</string>
    <string name="btnAfronden">Afronden</string>
    <string name="PREFS_NAME">COM.BOSTOEN.BE</string>
    <string name="txtTitle">Project RenBEN</string>
    <string name="txtThanksTO">Met dank aan:</string>
    <string name="txtNamenVives">Jirne Van Camp, Ruben Descheemaecker, Marnix Hauspie, David Claeys, Anthony Broeckaert en Laurens Plumet</string>
    <string name="txtNamenBostoen">Anne Goidts, Steve Wittouck, Christophe Debrabander en Dirk Vos</string>
    <string name="txtAboutOverRenBen">Deze app werd ontwikkeld binnen het RenBEN-project.
“RenBEN” staat voor “Renovatie tot een Bijna-Energie-Neutrale (rij)woningen in private huur”. Het RenBEN-project is een proeftuinproject en wordt door de Vlaamse Overheid gesteund via VLAIO (Agentschap Innoveren en Ondernemen).
Het doel van het project is om via een geïntegreerde aanpak tools te ontwerpen om rijwoningen betaalbaar BEN (Bijna Energie Neutraal) te renoveren en deze tool te testen en bijsturen in 30 exemplarische renovaties.
Voor deze 30 renovaties binnen het project RenBEN geven we extra ondersteuning en begeleiding om duurzame renovatiemaatregelen naar BEN te promoten.
De app Ren2BEN helpt u om een oplossing te zoeken voor een welbepaald onderdeel van de te behandelen bestaande woning om deze woning uiteindelijk te renoveren naar BEN. Zo kan u op basis van deze resultaten een gepast technisch en energetisch advies te geven aan de eigenaar of huurder van de woning.
</string>
    <string name="plaats_historiek">Recente plaatsen :</string>
    <string name="plaats_historiek_empty">Er zijn geen recente plaatsen</string>
    <string name="historiek">Historiek</string>
    <string name="historiek_waarschuwing">Door een item aan te klikken word de enquête tot deze vraag teruggedraaid en zal u vanaf dit punt herbeginnen.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>