<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical"
        >



        <CheckBox
            android:id="@+id/klantIsEigenaar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:checked="false"
            android:text="@string/chkOwnerLoginklant"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblNameLoginklant"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtNaamKlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblFirstNameLoginklant"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtVoornaamKlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblStreetLoginklant"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtStraatKlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblTownLoginklant"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtGemeenteKlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblNumberLoginklant"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtNrKlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:width="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblZipCodeLoginklant"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtPostcodeKlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:width="200dp" />

        <Button
            android:id="@+id/btnFragKeuze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnNextLoginklant"
            android:textSize="20dp" />

    </LinearLayout>
</ScrollView>
