<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtLogin"
        android:layout_gravity="center_horizontal"
        android:text="@string/logintitel" />

    <TextView
        android:text="@string/lblFirstNameLoginadviseur"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/txtVoornaamAdviseur"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/lblNameLoginadviseur"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/txtNaamAdviseur"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:text="@string/lblEmailLgoninadviseur"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/txtEmailAdviseur"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btnFragKlant"
        android:text="@string/btnNextLoginadviseur"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"/>

</LinearLayout>