<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblWelcomeHome"
            android:id="@+id/txtWelkom"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/btnStartHome"
                android:id="@+id/btnStart"
                android:layout_marginBottom="50dp"
                android:layout_below="@+id/txtWelkom"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:text="@string/btnSettingsHome"
                android:id="@+id/btnSettings"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/btnStart"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:text="@string/btnAboutHome"
                android:id="@+id/btnAbout"
                android:layout_below="@+id/btnSettings"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="54dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>