<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lblFirstNameInstellingen1"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/txtVoornaamAdviseur"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/lblNameInstellingen1"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/txtNaamAdviseur"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:text="@string/lblEmailInstellingen1"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/txtEmailAdviseur"
                android:layout_width="@dimen/edittext_width"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"/>

            <Button
                android:id="@+id/btnFragKlant"
                android:text="@string/btnConfirmInstellingen1"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="5dp"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>