<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnChangeEindscherm"
            android:id="@+id/btnWijzigen"
            android:layout_alignTop="@+id/txtResultaat"
            android:layout_alignEnd="@+id/btnVerzenden"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scroll"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:layout_weight="0.07"
                android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lblResultEindscherm"
                android:id="@+id/txtResultaat"
                android:maxLines = "10000"
                android:scrollbars = "vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.39"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:layout_weight="0.07"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnChooseListEindscherm"
                    android:id="@+id/btnKiesReeks"
                    android:layout_marginBottom="0dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@id/scroll" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSendEindscherm"
                    android:id="@+id/btnVerzenden"
                    android:layout_alignEnd="@id/scroll"
                    android:layout_alignTop="@+id/btnKiesReeks"
                    android:layout_marginLeft="30dp" />
            </LinearLayout>
            </LinearLayout>
        </ScrollView>



    </LinearLayout>


</RelativeLayout>