<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:baselineAligned="false">

        <TextView
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:width="0dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblQuestionVragenscherm"
            android:id="@+id/txtVraag"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:enabled="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp" />



        <ListView
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:id="@+id/AntwoordenList"/>


        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:id="@+id/imageView"
            android:background="#ffffff"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/btnOK" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="39dp"
            android:id="@+id/imgInfo"
            android:src="@drawable/info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblTipVragenscherm"
            android:id="@+id/txtTip"
            android:layout_alignTop="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOkVragenscherm"
            android:id="@+id/btnOK"
            android:layout_above="@+id/txtTip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"/>

</LinearLayout>
</ScrollView>
